[gd_scene load_steps=4 format=3 uid="uid://chldgnhe1p4fg"]

[ext_resource type="Script" path="res://scripts/character_sheet.gd" id="1_bacpi"]
[ext_resource type="Texture2D" uid="uid://dyfabdpg87qmi" path="res://icons/Add.svg" id="2_jwo46"]
[ext_resource type="Texture2D" uid="uid://bsrjpdacbqs26" path="res://icons/MakeFloating.svg" id="3_03ubt"]

[node name="CharacterSheet" type="Window"]
title = "Name - Character sheet"
position = Vector2i(0, 36)
size = Vector2i(600, 600)
always_on_top = true
theme_override_font_sizes/title_font_size = 0
script = ExtResource("1_bacpi")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attributes" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Attributes/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FlowContainer" type="HBoxContainer" parent="TabContainer/Attributes/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name_LineEdit" type="LineEdit" parent="TabContainer/Attributes/MarginContainer/VBoxContainer/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="Add_Attribute_Button" type="Button" parent="TabContainer/Attributes/MarginContainer/VBoxContainer/FlowContainer"]
layout_mode = 2
icon = ExtResource("2_jwo46")

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Attributes/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Attributes/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Macros"

[node name="ItemList" type="ItemList" parent="TabContainer/Attributes/MarginContainer2/VBoxContainer"]
layout_mode = 2
item_count = 2
item_0/text = "name"
item_1/text = "value"

[node name="PopupButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
icon = ExtResource("3_03ubt")
icon_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="TabContainer/Attributes/MarginContainer/VBoxContainer/FlowContainer/Add_Attribute_Button" to="." method="_on_add_attribute_button_pressed"]
[connection signal="pressed" from="PopupButton" to="." method="_on_popup_button_pressed"]
